Two steps of form

--- a/src/components/stepper/stepper.css
+++ b/src/components/stepper/stepper.css
@@ -24,7 +24,7 @@
     text-align: center;
     padding: 0.5rem 0.75rem;
     margin-right: 1rem;
-    border: 1px solid aliceblue;
+    border: 1px solid hsl(206, 94%, 87%);
     border-radius: 2rem;
 }
 
@@ -34,4 +34,9 @@
 
 .stepper-list__item-title {
     font-family: UbuntuBold, sans-serif;
+}
+
+.active {
+    color: hsl(243, 100%, 62%);
+    background: hsl(206, 94%, 87%);
 }
