--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -1,3 +1,86 @@
 .form {
-
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1rem;
+    width: 50%;
 }
+
+.form__header {
+    font-family: UbuntuBold, sans-serif;
+    color: hsl(213, 96%, 18%);
+}
+
+.form__description {
+    display: block;
+    color: hsl(231, 11%, 63%);
+    margin-bottom: 1rem;
+}
+
+.form-plans {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+
+.form-switch {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.form-switch__name {
+    font-family: UbuntuMedium, sans-serif;
+    color: hsl(231, 11%, 63%);
+}
+
+.current {
+    color: hsl(213, 96%, 18%);
+}
+
+.plans-switch {
+    position: relative;
+    display: inline-block;
+    width: 3rem;
+    height:1.5rem;
+    margin: 0 1rem;
+}
+
+.plans-switch__checkbox {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.plans-switch__slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: hsl(213, 96%, 18%);
+    border-radius: 1rem;
+}
+
+.plans-switch__slider:before {
+    position: absolute;
+    content: '';
+    height: 1.1rem;
+    width: 1.1rem;
+    left: 0.2rem;
+    bottom: 0.2rem;
+    background-color: white;
+    border-radius: 1.6rem;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.plans-switch__checkbox:checked + .plans-switch__slider:before {
+    transform: translateX(1.5rem);
+}
+
+.hide {
+    display: none;
+}
+
