--- a/src/components/first-step/first-step.css
+++ b/src/components/first-step/first-step.css
@@ -1,3 +1,9 @@
+.step-1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .form-input {
     margin-bottom: 2rem;
 }
