--- a/src/components/final-step/final-step.css
+++ b/src/components/final-step/final-step.css
@@ -46,4 +46,16 @@
     color: hsl(243, 100%, 62%);
 }
 
+@media (max-width: 1440px){
+
+}
+
+@media (max-width: 990px) {
+
+}
+
+@media (max-width: 770px) {
+
+}
+
 
