--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -4,28 +4,6 @@
     padding: 1rem;
     height: 100vh;
     display: flex;
-
-}
-
-@font-face {
-    font-family: "UbuntuRegular";
-    src: url("../../assets/fonts/Ubuntu-Regular.ttf") format("truetype");
-    font-style: normal;
-    font-weight: normal;
-}
-
-@font-face {
-    font-family: "UbuntuMedium";
-    src: url("../../assets/fonts/Ubuntu-Medium.ttf") format("truetype");
-    font-style: normal;
-    font-weight: normal;
-}
-
-@font-face {
-    font-family: "UbuntuBold";
-    src: url("../../assets/fonts/Ubuntu-Bold.ttf") format("truetype");
-    font-style: normal;
-    font-weight: normal;
 }
 
 .step {
@@ -53,3 +31,57 @@
 .hide {
     display: none;
 }
+
+@font-face {
+    font-family: "UbuntuRegular";
+    src: url("../../assets/fonts/Ubuntu-Regular.ttf") format("truetype");
+    font-style: normal;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: "UbuntuMedium";
+    src: url("../../assets/fonts/Ubuntu-Medium.ttf") format("truetype");
+    font-style: normal;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: "UbuntuBold";
+    src: url("../../assets/fonts/Ubuntu-Bold.ttf") format("truetype");
+    font-style: normal;
+    font-weight: normal;
+}
+
+@media (max-width: 1440px){
+
+}
+
+@media (max-width: 990px) {
+
+}
+
+@media (max-width: 770px) {
+    .app {
+        min-height: 100vh;
+        background: url("../../assets/images/bg-sidebar-mobile.svg") no-repeat, hsl(217, 100%, 97%);
+        background-size: 100%;
+        padding: 1rem;
+        height: auto;
+        display: block;
+        position: relative;
+    }
+
+    .step {
+        background-color: hsl(0, 0%, 100%);
+
+        border-radius: 1rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 1.5rem;
+        width: auto;
+    }
+}
+
+
