--- a/src/components/plan-card/plan-card.css
+++ b/src/components/plan-card/plan-card.css
@@ -26,3 +26,35 @@
 .active-plan {
     border: 2px solid hsl(243, 100%, 62%);
 }
+
+@media (max-width: 1440px){
+
+}
+
+@media (max-width: 990px) {
+
+}
+
+@media (max-width: 770px) {
+    .form-plan {
+        width: auto;
+        padding: 1rem;
+        display: flex;
+        align-items: center;
+        margin-bottom: 1rem;
+    }
+
+    .form-plan__img {
+        margin-bottom: 0;
+        margin-right: 1rem;
+    }
+
+    .form-plan__header {
+        margin: 0 0 .25rem 0;
+    }
+
+    .form-plan__price {
+        margin: 0 0 .25rem 0;
+    }
+
+}
