--- a/src/components/second-step/second-step.css
+++ b/src/components/second-step/second-step.css
@@ -60,3 +60,25 @@
 .plans-switch__checkbox:checked + .plans-switch__slider:before {
     transform: translateX(1.5rem);
 }
+
+@media (max-width: 1440px){
+
+}
+
+@media (max-width: 990px) {
+
+}
+
+@media (max-width: 770px) {
+    .form-plans {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin-bottom: 1rem;
+    }
+
+    .form-switch {
+        margin-bottom: 1rem;
+    }
+
+}
