--- a/src/components/stepper/stepper.css
+++ b/src/components/stepper/stepper.css
@@ -17,6 +17,8 @@
     display: flex;
     align-items: center;
     margin-bottom: 2rem;
+    text-decoration: none;
+    color: aliceblue;
 }
 
 .stepper-list__item-number {
@@ -56,6 +58,10 @@
         height: auto;
         width: auto;
         margin: 0;
+    }
+
+    .link {
+        text-decoration: none;
     }
 
     .stepper-list {
